# vellum-workflows-sdk

./: .coverage  .cursorignore  .gitignore  .replit  Makefile  README.md  SpecStory20Dec24.md  prompts.csv  pyproject.toml  requirements.txt  results.xlsx  streamlit_app.py  terminal_view.py  vellum_prompt_call_example.1.py  vellum_prompt_call_example.py
.devcontainer/: devcontainer.json
contract_probe_results/: contract_evolution_20241220_023920.json
demo_results/: demo_01_results.json  demo_02_results.json  demo_03_results.json  demo_04_results.json  demo_05_results.json  demo_06_results.json  demo_07_results.json  demo_08_results.json  demo_09_results.json  demo_10_results.json  demo_11_results.json
examples/: vellum_prompt_examples.py
pi_sdk/: .gitignore  README.md  experiment_rate_limit_tests_20241218_183647.md  experiment_rate_limit_tests_20241218_183834.md  experiment_rate_limit_tests_20241218_184124.md  experiment_tuning_pattern_tests_20241218_183819.md  experiment_tuning_pattern_tests_20241218_184006.md  pi_sdk_probe.py  requirements.txt  sdk_auth_probe_results.md  setup.py
probe_results/: contract_patterns_20241218_185910.json  contract_patterns_20241218_190046.json  contract_patterns_20241218_190319.json  inference_20241218_185643.json  inference_patterns_20241218_185910.json  inference_patterns_20241218_190023.json  inference_patterns_20241218_190253.json  rate_limits_20241218_185656.json  scoring_20241218_185649.json  tuning_patterns_20241218_185910.json  tuning_patterns_20241218_190046.json  tuning_patterns_20241218_192513.json
src/: JianPrompt.gs  (+2 more)
(+91 files in other folders)
