[project]
name = "vellum-workflows-sdk"
version = "0.1.0"
description = "Vellum Workflows SDK and CLI tools"
requires-python = ">=3.11"
authors = [
    {name = "Vellum Team"}
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "rich>=10.0.0",
    "pandas>=2.0.0",
    "vellum-ai>=0.13.28",
    "numpy>=1.23.2",
    "python-dateutil>=2.8.2",
    "pytz>=2020.1",
    "tzdata>=2022.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 300
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 300
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 300

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 